--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,6 +27,34 @@ html {
   display: inline-block;
 }
 
+.wave-container {
+  position: absolute;
+  top: 60%;
+  left: 0;
+  width: 100%;
+  line-height: 0;
+}
+
+.wave {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100px; /* Було 100px */
+  transform: scaleY(-1);
+}
+
+.wave svg {
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+  height: 50px;
+}
+
+.wave .shape-fill {
+  fill: #8eb486; /* Такий самий колір, як у навігації */
+}
+
+/* Оновлена навігація */
 nav {
   font-family: "Poppins", serif;
   font-weight: 400;
@@ -39,9 +67,8 @@ nav {
   top: 0;
   left: 50%;
   transform: translateX(-50%);
-  border-bottom-left-radius: 15px;
-  border-bottom-right-radius: 15px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
 }
 
 .nav-container {
