--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,7 @@ body {
   font-family: "Poppins", serif;
   font-weight: 400;
   font-style: normal;
-  background-color: #997c70;
+  background-color: #8eb486;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -21,7 +21,6 @@ html {
   width: 70%;
   background-color: white;
   padding: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   margin-top: 20px;
   border-radius: 15px;
   display: inline-block;
@@ -39,7 +38,7 @@ html {
   position: relative;
   display: block;
   width: 100%;
-  height: 100px; /* Було 100px */
+  height: 75px; /* Було 100px */
   transform: scaleY(-1);
 }
 
@@ -67,7 +66,6 @@ nav {
   top: 0;
   left: 50%;
   transform: translateX(-50%);
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   z-index: 1000;
 }
 
