--- a/public/css/style.css
+++ b/public/css/style.css
@@ -58,7 +58,7 @@ nav {
   font-family: "Poppins", serif;
   font-weight: 400;
   font-style: normal;
-  width: 72.2%;
+  width: 80%;
   background-color: #8eb486;
   padding: 15px 0;
   color: white;
@@ -331,4 +331,58 @@ nav {
 
 .contact-item a:hover {
   text-decoration: underline;
+}
+
+.burger-menu {
+  display: none; /* За замовчуванням приховано */
+  flex-direction: column;
+  cursor: pointer;
+  background: none;
+  border: none;
+  padding: 10px;
+}
+
+.burger-menu span {
+  display: block;
+  width: 30px;
+  height: 3px;
+  background-color: white;
+  margin: 5px;
+  transition: 0.3s;
+}
+
+@media (max-width: 768px) {
+  .burger-menu {
+    display: flex;
+  }
+
+  .nav-links {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 70px;
+    right: 0;
+    background-color: #8eb486;
+    width: 200px;
+    text-align: center;
+    border-radius: 10px;
+    padding: 40px 0;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  }
+
+  .nav-links.active {
+    display: flex;
+  }
+
+  .burger-menu.open span:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+  }
+
+  .burger-menu.open span:nth-child(2) {
+    opacity: 0;
+  }
+
+  .burger-menu.open span:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+  }
 }
