--- a/public/css/style.css
+++ b/public/css/style.css
@@ -415,4 +415,20 @@ nav {
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     object-fit: cover;
   }
+
+  .wave-container {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 100%;
+    line-height: 0;
+  }
+
+  .wave {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 75px; /* Було 100px */
+    transform: scaleY(-1);
+  }
 }
