--- a/public/css/style.css
+++ b/public/css/style.css
@@ -406,6 +406,7 @@ nav {
     align-items: center;
     justify-content: space-around;
     padding: 20px;
+    margin-top: 100px;
   }
 
   .profile-photo {
